[package]
name = "gpugovernor"
version = "2.11.0"
edition = "2024"
authors = ["Seyud", "Tools-cx-app"]
description = "Mediatek Mali GPU Load-Based Frequency Adjustment"

[dependencies]
log = "0.4"
chrono = "0.4"
inotify = "0.11"
libc = "0.2"
anyhow = "1.0"
once_cell = "1.21"
regex = "1.12.2"
dumpsys-rs = { git = "https://github.com/shadow3aaa/dumpsys-rs" }
toml = "0.9.11"
serde = { version = "1.0.228", features = ["derive"] }

[profile.dev]
lto = true
overflow-checks = true
incremental = true
codegen-units = 256

[profile.release]
overflow-checks = false
codegen-units = 1
lto = "fat"
opt-level = 3
strip = true
